--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WDD Portfolio Table of Contents</title>
 </head>
 <body>
-    
+    <ol></ol>
 </body>
+<script src="js/main.js"></script>
 </html>
