dynamically added array items for table of contents.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>WDD Portfolio Table of Contents</title>
 </head>
 <body>
+    <h1>Table of Contents</h1>
     <ol></ol>
 </body>
 <script src="js/main.js"></script>
