updated week one pages.

--- a/week1/questions.html
+++ b/week1/questions.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <h1>Week 1 Reading</h1>
+    <h1>Questions from Reading</h1>
     <ul>
-        <li><a href="notes.html">Reading notes</a></li>
-        <li><a href="questions.html">Questions</a></li>
+        <li></li>
     </ul>
     
+
 </body>
 
 </html>
