week one questions update.

--- a/week1/questions.html
+++ b/week1/questions.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Questions from Reading</h1>
     <ul>
-        <li></li>
+        <li>No questions for this week.</li>
     </ul>
     
 
