--- a/week6/index.html
+++ b/week6/index.html
@@ -7,7 +7,7 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>TO-DO APPLICATION</h1>
+      <h1>TO-DO LIST APPLICATION</h1>
     </header>
 
     <!-- Main -->
