added javascript code to build the game.

--- a/week13/index.html
+++ b/week13/index.html
@@ -26,26 +26,13 @@
           its current value between rolls.
         </p>
       </div>
-      <div class="btn-container">
-        <button class="unchecked" id="1">1</button>
-        <button class="unchecked" id="2">1</button>
-        <button class="unchecked" id="3">1</button>
-        <button class="unchecked" id="4">1</button>
-        <button class="unchecked" id="5">1</button>
-        <button class="unchecked" id="6">1</button>
-        <button class="unchecked" id="7">1</button>
-        <button class="unchecked" id="8">1</button>
-        <button class="unchecked" id="9">1</button>
-        <button class="unchecked" id="10">1</button>
-      </div>
+      <div id="btn-container" class="btn-container"></div>
 
       <div class="play-btn-container">
-        <button id="play-btn">Roll</button>
+        <button id="play-btn"></button>
       </div>
+      <div class="finish" id="finish"></div>
     </main>
-
-    <!-- Footer -->
-    <footer></footer>
   </body>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </html>
